--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules -r tsconfig-paths/register src/server.ts",
-    "start": "node -r module-alias/register dist/server"
+    "start": "node -r module-alias/register build/server"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -18,11 +18,19 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/module-alias": "^2.0.1",
+    "@types/node": "^16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "prettier": "^2.4.1",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.4"
   },
   "_moduleAliases": {
-    "@src": "dist"
+    "@src": "build"
   }
 }
