--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "api-name",
   "version": "1.0.0",
-  "main": "dist/server.js",
+  "main": "build/server.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules -r tsconfig-paths/register src/server.ts",
-    "start": "node -r module-alias/register build/server"
+    "build": "rimraf ./build && tsc",
+    "dev": "ts-node-dev --respawn --inspect --transpile-only --ignore-watch node_modules -r tsconfig-paths/register src/server.ts",
+    "start": "node -r module-alias/register build/server",
+    "lint": "eslint --fix --ext .js,.ts,.json .",
+    "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -17,6 +19,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
@@ -25,7 +28,10 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "jest": "^27.3.1",
     "prettier": "^2.4.1",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.4"
