--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^27.0.2",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^16.11.7",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^8.2.0",
@@ -31,6 +32,7 @@
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
+    "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
